Added ISBN Tapa Blanda

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
         <section class="copyright text-sm">
             <p>Copyright © 2025 Lucy Duncan</p>
             <p>Todos los derechos reservados.</p>
-            <p>ISBN: 9798291126769</p>
+            <p>ISBN: 9798291039663 (Tapa Blanda)</p>
+            <p>ISBN: 9798291126769 (Tapa Dura)</p>
         </section>
 
         <!-- Contenido de los capítulos -->
