--- a/index.html
+++ b/index.html
@@ -112,7 +112,28 @@
                  <iframe class="absolute top-0 left-0 w-full h-full rounded-lg shadow-lg" src="https://www.youtube.com/embed/36C7kKj8s0g" title="Tráiler del libro Una Dama en Boston" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
              </div>
         </section>
-
+                <!-- Social Media Link -->
+        <section class="my-8 text-center">
+            <a href="https://www.instagram.com/bookslucyduncan" target="_blank" rel="noopener noreferrer" class="inline-flex items-center gap-3 text-stone-700 hover:text-stone-900 transition-colors duration-300 group">
+                <!-- Real Instagram Icon SVG with Gradient -->
+                <svg class="w-8 h-8" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <defs>
+                        <radialGradient id="instagram-gradient" cx="0" cy="0" r="1" gradientUnits="userSpaceOnUse" gradientTransform="translate(28 4) rotate(135) scale(34)">
+                            <stop stop-color="#FEDC75"/>
+                            <stop offset="0.22" stop-color="#F77737"/>
+                            <stop offset="0.45" stop-color="#F56040"/>
+                            <stop offset="0.67" stop-color="#FD1D1D"/>
+                            <stop offset="0.88" stop-color="#C13584"/>
+                            <stop offset="1" stop-color="#833AB4"/>
+                        </radialGradient>
+                    </defs>
+                    <rect width="32" height="32" rx="8" fill="url(#instagram-gradient)"/>
+                    <circle cx="16" cy="16" r="6.5" stroke="white" stroke-width="3"/>
+                    <circle cx="24" cy="8" r="1.5" fill="white"/>
+                </svg>
+                <span class="font-semibold text-lg">@bookslucyduncan</span>
+            </a>
+        </section>
         <!-- INICIO: Menú de Navegación Rápida -->
         <nav class="my-10 py-6 bg-amber-100 rounded-lg border border-amber-200">
             <ul class="flex flex-wrap justify-center gap-x-4 gap-y-4">
