--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <p>—¿Y si yo te acompañara, Amy? Podríamos enfrentar juntas la aventura.</p>
                 <p>La idea de separarse de su querida hermana había sido el único obstáculo verdadero en los planes de Amelia. La posibilidad de que Elizabeth la acompañara iluminó su rostro con una sonrisa espontánea.</p>
                 <p>—¡Cielos! ¿Pretenden abandonarme ambas? —la Baronesa Woodfield presionó su pañuelo contra los ojos—. ¿Qué clase de hijas he criado, para que deseen tan fervientemente escapar del seno materno?</p>
-                <p>—No deseamos escapar, madre —aclaró Amelia con paciencia—. Deseamos asegurar nuestro futuro y el tuyo. Si logramos establecernos favorablemente en Boston, podrías reunirte con nosotras. Imagina las posibilidades: una new sociedad donde nuestro apellido mantiene su prestigio, pero donde nuestras limitaciones económicas no son de conocimiento público.</p>
+                <p>—No deseamos escapar, madre —aclaró Amelia con paciencia—. Deseamos asegurar nuestro futuro y el tuyo. Si logramos establecernos favorablemente en Boston, podrías reunirte con nosotras. Imagina las posibilidades: una nueva sociedad donde nuestro apellido mantiene su prestigio, pero donde nuestras limitaciones económicas no son de conocimiento público.</p>
                 <p>La mención de una sociedad donde su reducida circunstancia permanecería en secreto pareció despertar el interés de la Baronesa Woodfield. Si había algo que temía más que la perspectiva de América, era enfrentar la compasión apenas disimulada de quienes habían sido sus iguales.</p>
                 <p>—Suponiendo que considerara semejante plan—dijo, abandonando gradualmente su postura de rechazo absoluto—, ¿cómo financiaríamos tal empresa? El viaje transatlántico no es un asunto baladí.</p>
                 <p>—La señora Harrington ha ofrecido adelantar los gastos del pasaje —respondió Amelia, quien evidentemente había considerado todos los pormenores—. Y tengo mis ahorros de los últimos cinco años, aquellos que papá insistía en que guardara para mi ajuar.</p>
@@ -303,8 +303,10 @@
                     <p>"Estimado primo Stillman:</p>
                     <p>En vísperas de nuestra partida hacia tierras americanas, deseo expresarle mi más sincero agradecimiento por su generosa oferta de acogernos en la rectoría. Su bondad cristiana nos conmovió profundamente, y siempre recordaremos tal gesto como prueba de los sólidos valores familiares que el difunto señor Woodfield tanto apreciaba.</p>
                     <p>Nuestra decisión de emprender esta aventura transatlántica no debe interpretarse como desprecio hacia su hospitalidad, sino como la búsqueda de un camino que permita a esta rama de la familia recuperar…"</p>
+                 </div>   
                     <p>La pluma se detuvo sobre el papel. ¿Recuperar qué, exactamente? ¿La posición social perdida? ¿La independencia económica? ¿O perseguían algo que nunca antes habían poseído: la libertad de forjar un destino propio, sin las limitaciones que la sociedad inglesa imponía a tres mujeres solas?</p>
                     <p>Tras una pausa reflexiva, Amelia continuó:</p>
+                 <div class="letter">
                     <p>"...recuperar la estabilidad que las circunstancias recientes nos han arrebatado. Confiamos en que nuestros parientes Harrington nos brindarán la oportunidad de establecernos dignamente en Boston, ciudad que, según todas las referencias, combina admirablemente el refinamiento europeo con el espíritu emprendedor del Nuevo Mundo.</p>
                     <p>Le ruego transmita nuestros afectuosos saludos a nuestros conocidos. Prometo escribir nuevamente cuando hayamos arribado a nuestro destino, para compartir nuestras primeras impresiones de la sociedad bostoniana.</p>
                     <p>Su agradecida prima,</p>
