Added Amazon image

--- a/index.html
+++ b/index.html
@@ -82,16 +82,22 @@
             <span class="font-semibold text-lg">Comprar</span>
         </button>
         <!-- Menú desplegable (inicialmente oculto) -->
-        <div id="buy-menu" class="hidden absolute top-16 left-0 mt-2 w-48 bg-white rounded-lg shadow-xl ring-1 ring-black ring-opacity-5 transform scale-95 opacity-0">
+        <div id="buy-menu" class="hidden absolute top-16 left-0 mt-2 w-56 bg-white rounded-lg shadow-xl ring-1 ring-black ring-opacity-5 transform scale-95 opacity-0">
             <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan-ebook/dp/B0FGTMY2CH" target="_blank" rel="noopener noreferrer" class="block px-4 py-3 text-sm text-stone-700 hover:bg-stone-100 hover:text-stone-900 font-semibold" role="menuitem">
-                    <span class="mr-2">📖</span> Ebook
+                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan-ebook/dp/B0FGTMY2CH" target="_blank" rel="noopener noreferrer" class="flex items-center px-4 py-3 text-sm text-stone-700 hover:bg-stone-100 hover:text-stone-900 font-semibold" role="menuitem">
+                    <span class="mr-2">📖</span>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-8 w-auto ml-2">
+                    <span class="flex-grow">Ebook</span>
                 </a>
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY5FCRW" target="_blank" rel="noopener noreferrer" class="block px-4 py-3 text-sm text-stone-700 hover:bg-stone-100 hover:text-stone-900 font-semibold" role="menuitem">
-                    <span class="mr-2">📗</span> Tapa Blanda
+                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY5FCRW" target="_blank" rel="noopener noreferrer" class="flex items-center px-4 py-3 text-sm text-stone-700 hover:bg-stone-100 hover:text-stone-900 font-semibold" role="menuitem">
+                    <span class="mr-2">📗</span>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-8 w-auto ml-2">
+                    <span class="flex-grow">Tapa Blanda</span>
                 </a>
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY1TJKC" target="_blank" rel="noopener noreferrer" class="block px-4 py-3 text-sm text-stone-700 hover:bg-stone-100 hover:text-stone-900 font-semibold" role="menuitem">
-                    <span class="mr-2">📘</span> Tapa Dura
+                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY1TJKC" target="_blank" rel="noopener noreferrer" class="flex items-center px-4 py-3 text-sm text-stone-700 hover:bg-stone-100 hover:text-stone-900 font-semibold" role="menuitem">
+                    <span class="mr-2">📘</span>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-8 w-auto ml-2">
+                    <span class="flex-grow">Tapa Dura</span>
                 </a>
             </div>
         </div>
@@ -145,12 +151,24 @@
         <!-- FIN: Menú de Navegación Rápida -->
 
         <!-- Sección de Compra (Inicio) -->
-        <section class="my-12 text-center">
+            <section class="my-12 text-center">
             <h3 class="text-2xl font-semibold mb-6 text-stone-800">Consigue tu copia</h3>
             <div class="flex flex-col sm:flex-row justify-center items-center gap-4">
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan-ebook/dp/B0FGTMY2CH" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-2"><span class="text-xl">📖</span>Ebook</a>
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY5FCRW" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-2"><span class="text-xl">📗</span>Tapa Blanda</a>
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY1TJKC" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-2"><span class="text-xl">📘</span>Tapa Dura</a>
+                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan-ebook/dp/B0FGTMY2CH" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
+                    <span class="text-xl">📖</span>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-9 w-auto">
+                    <span>Ebook</span>
+                </a>
+                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY5FCRW" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
+                    <span class="text-xl">📗</span>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-9 w-auto">
+                    <span>Tapa Blanda</span>
+                </a>
+                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY1TJKC" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
+                    <span class="text-xl">📘</span>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-9 w-auto">
+                    <span>Tapa Dura</span>
+                </a>
             </div>
         </section>
                 <hr class="separator">
@@ -555,12 +573,24 @@
         
         <!-- Sección de Compra (Final) -->
         <hr class="separator">
-        <section class="my-12 text-center">
+            <section class="my-12 text-center">
             <h3 class="text-2xl font-semibold mb-6 text-stone-800">Consigue tu copia</h3>
             <div class="flex flex-col sm:flex-row justify-center items-center gap-4">
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan-ebook/dp/B0FGTMY2CH" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-2"><span class="text-xl">📖</span>Ebook</a>
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY5FCRW" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-2"><span class="text-xl">📗</span>Tapa Blanda</a>
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY1TJKC" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-2"><span class="text-xl">📘</span>Tapa Dura</a>
+                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan-ebook/dp/B0FGTMY2CH" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
+                    <span class="text-xl">📖</span>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-9 w-auto">
+                    <span>Ebook</span>
+                </a>
+                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY5FCRW" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
+                    <span class="text-xl">📗</span>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-9 w-auto">
+                    <span>Tapa Blanda</span>
+                </a>
+                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY1TJKC" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
+                    <span class="text-xl">📘</span>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-9 w-auto">
+                    <span>Tapa Dura</span>
+                </a>
             </div>
         </section>
 
