Amazon link change (AMZ prner)

--- a/index.html
+++ b/index.html
@@ -84,17 +84,17 @@
         <!-- Menú desplegable (inicialmente oculto) -->
         <div id="buy-menu" class="hidden absolute top-16 left-0 mt-2 w-56 bg-white rounded-lg shadow-xl ring-1 ring-black ring-opacity-5 transform scale-95 opacity-0">
             <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan-ebook/dp/B0FGTMY2CH" target="_blank" rel="noopener noreferrer" class="flex items-center px-4 py-3 text-sm text-stone-700 hover:bg-stone-100 hover:text-stone-900 font-semibold" role="menuitem">
+                <a href="https://amzn.eu/d/brNA8Cz" target="_blank" rel="noopener noreferrer" class="flex items-center px-4 py-3 text-sm text-stone-700 hover:bg-stone-100 hover:text-stone-900 font-semibold" role="menuitem">
                     <span class="mr-2">📖</span>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-8 w-auto ml-2">
                     <span class="flex-grow">Ebook</span>
                 </a>
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY5FCRW" target="_blank" rel="noopener noreferrer" class="flex items-center px-4 py-3 text-sm text-stone-700 hover:bg-stone-100 hover:text-stone-900 font-semibold" role="menuitem">
+                <a href="https://amzn.eu/d/0rodGUu" target="_blank" rel="noopener noreferrer" class="flex items-center px-4 py-3 text-sm text-stone-700 hover:bg-stone-100 hover:text-stone-900 font-semibold" role="menuitem">
                     <span class="mr-2">📗</span>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-8 w-auto ml-2">
                     <span class="flex-grow">Tapa Blanda</span>
                 </a>
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY1TJKC" target="_blank" rel="noopener noreferrer" class="flex items-center px-4 py-3 text-sm text-stone-700 hover:bg-stone-100 hover:text-stone-900 font-semibold" role="menuitem">
+                <a href="https://amzn.eu/d/eUK0gKp" target="_blank" rel="noopener noreferrer" class="flex items-center px-4 py-3 text-sm text-stone-700 hover:bg-stone-100 hover:text-stone-900 font-semibold" role="menuitem">
                     <span class="mr-2">📘</span>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-8 w-auto ml-2">
                     <span class="flex-grow">Tapa Dura</span>
@@ -154,17 +154,17 @@
             <section class="my-12 text-center">
             <h3 class="text-2xl font-semibold mb-6 text-stone-800">Consigue tu copia</h3>
             <div class="flex flex-col sm:flex-row justify-center items-center gap-4">
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan-ebook/dp/B0FGTMY2CH" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
+                <a href="https://amzn.eu/d/brNA8Cz" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
                     <span class="text-xl">📖</span>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-9 w-auto">
                     <span>Ebook</span>
                 </a>
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY5FCRW" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
+                <a href="https://amzn.eu/d/0rodGUu" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
                     <span class="text-xl">📗</span>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-9 w-auto">
                     <span>Tapa Blanda</span>
                 </a>
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY1TJKC" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
+                <a href="https://amzn.eu/d/eUK0gKp" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
                     <span class="text-xl">📘</span>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-9 w-auto">
                     <span>Tapa Dura</span>
@@ -576,17 +576,17 @@
             <section class="my-12 text-center">
             <h3 class="text-2xl font-semibold mb-6 text-stone-800">Consigue tu copia</h3>
             <div class="flex flex-col sm:flex-row justify-center items-center gap-4">
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan-ebook/dp/B0FGTMY2CH" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
+                <a href="https://amzn.eu/d/brNA8Cz" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
                     <span class="text-xl">📖</span>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-9 w-auto">
                     <span>Ebook</span>
                 </a>
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY5FCRW" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
+                <a href="https://amzn.eu/d/0rodGUu" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
                     <span class="text-xl">📗</span>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-9 w-auto">
                     <span>Tapa Blanda</span>
                 </a>
-                <a href="https://www.amazon.es/Una-Dama-Boston-Lucy-Duncan/dp/B0FGY1TJKC" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
+                <a href="https://amzn.eu/d/eUK0gKp" target="_blank" rel="noopener noreferrer" class="bg-stone-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-stone-700 transition duration-300 w-full sm:w-auto flex items-center justify-center gap-3">
                     <span class="text-xl">📘</span>
                     <img src="https://upload.wikimedia.org/wikipedia/commons/archive/d/de/20171005153411%21Amazon_icon.png" alt="Logo de Amazon" class="h-9 w-auto">
                     <span>Tapa Dura</span>
@@ -635,6 +635,56 @@
             }
         });
     </script>
+
+    <script>
+    // Función para redirigir los enlaces de Amazon
+    function redirectAmazonLinks() {
+        // Hacemos una llamada a la API de ipapi.co para obtener la ubicación del usuario
+        fetch('https://ipapi.co/json/')
+            .then(response => response.json())
+            .then(data => {
+                const countryCode = data.country_code; // Obtiene el código del país, ej: "US", "GB", "DE"
+
+                // Mapeo de códigos de país a dominios de Amazon
+                // Puedes añadir más países a esta lista
+                const amazonDomains = {
+                    'US': 'amazon.com',
+                    'GB': 'amazon.co.uk',
+                    'DE': 'amazon.de',
+                    'FR': 'amazon.fr',
+                    'IT': 'amazon.it',
+                    'CA': 'amazon.ca',
+                    'AU': 'amazon.com.au',
+                    'JP': 'amazon.co.jp',
+                    'MX': 'amazon.com.mx',
+                    'BR': 'amazon.com.br'
+                    // Por defecto, si el país no está en la lista, se mantendrá .es
+                };
+
+                const newDomain = amazonDomains[countryCode];
+
+                // Si encontramos un dominio para el país del usuario, actualizamos los enlaces
+                if (newDomain) {
+                    // Seleccionamos todos los enlaces que apuntan a Amazon España
+                    const amazonLinks = document.querySelectorAll('a[href*="amazon.es"]');
+
+                    console.log(`País detectado: ${countryCode}. Cambiando dominio a ${newDomain}`);
+
+                    // Recorremos cada enlace y reemplazamos el dominio
+                    amazonLinks.forEach(link => {
+                        link.href = link.href.replace('amazon.es', newDomain);
+                    });
+                }
+            })
+            .catch(error => {
+                console.error('Error al detectar la ubicación:', error);
+                // Si hay un error, los enlaces simplemente se quedarán apuntando a amazon.es
+            });
+    }
+
+    // Ejecutamos la función cuando el contenido de la página se haya cargado
+    document.addEventListener('DOMContentLoaded', redirectAmazonLinks);
+</script>
 
 </body>
 </html>
